--- a/guestbook.html
+++ b/guestbook.html
@@ -72,7 +72,7 @@
                 <h2 class="section-heading mb-4">
                   <span class="section-heading-upper">Right Candidate for the Right Company</span>
                 </h2>
-                <p>If you believe I am an ideal potential candidate, then I would love to hear from you. Please fill out the form below and I will respond to you within 24-48hrs</p>
+                <p>If you believe I am an ideal potential candidate, then I would love to hear from you. Please fill out the form below and I will respond to you within 24-48hrs (URGENT: This Form is currently offline. Please email me directly at a.steenmeyer0777@edmail.edu)</p>
                 <br>
               <form
 method="post"
