--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Amelia</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,13 +45,13 @@
               <a class="nav-link text-uppercase text-expanded" href="resume.html">Resume</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="reflections.html">Reflections</a>
+              <a class="nav-link text-uppercase text-expanded" href="reflections.html">Testimonials</a>
             </li>
 			<li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="interests.html">Interests</a>
+              <a class="nav-link text-uppercase text-expanded" href="interests.html">Portfolio</a>
             </li>
 			<li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="guestbook.html">Guest book</a>
+              <a class="nav-link text-uppercase text-expanded" href="guestbook.html">GuestBook</a>
 			  </li>
           </ul>
         </div>
