--- a/interests.html
+++ b/interests.html
@@ -25,14 +25,14 @@
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">Interests</span>
+      <span class="site-heading-upper text-primary mb-3">Portfolio</span>
       <span class="site-heading-lower">What I do!</span>
     </h1>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Amelia</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,10 +46,10 @@
               <a class="nav-link text-uppercase text-expanded" href="resume.html">Resume</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="reflections.html">Reflections</a>
+              <a class="nav-link text-uppercase text-expanded" href="reflections.html">Testimonials</a>
             </li>
 			<li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="interests.html">Interests</a>
+              <a class="nav-link text-uppercase text-expanded" href="interests.html">Portfolio</a>
 			<span class="sr-only">(current)</span>
             </li>
              <li class="nav-item px-lg-4">
