--- a/resume.html
+++ b/resume.html
@@ -31,14 +31,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Amelia</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="home.html">Home
+              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
 			  <li class="nav-item active px-lg-4">
@@ -48,10 +48,10 @@
               <a class="nav-link text-uppercase text-expanded" href="reflections.html">Testimonials</a>
             </li>
 			<li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="interests.html">Portfolio</a>
+              <a class="nav-link text-uppercase text-expanded" href="interests.html">Portfolio (In-Work)</a>
             </li>
 			<li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="guestbook.html">GuestBook</a>
+              <a class="nav-link text-uppercase text-expanded" href="guestbook.html">Guest book</a>
 			  </li>
           </ul>
         </div>
@@ -71,20 +71,32 @@
                   Advanced Business Systems Analyst Certificate - EDCC
                   <span class="ml-auto">June 2019</span>
                 </li>
-				<li class="list-unstyled-item list-hours-item d-flex">
-                  MTA: Database Fundamentals - Certified 2018 - MSFT
-                  <span class="ml-auto"> </span>
+                <li class="list-unstyled-item list-hours-item d-flex">
+                  Database Certificate of Completion - EDCC
+                  <span class="ml-auto">March 2019</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Accounting Courses– University of Washington 
+                  Requirements Analysis Certificate of Completion - EDCC
+                  <span class="ml-auto">March 2019</span>
+                </li>
+                <li class="list-unstyled-item list-hours-item d-flex">
+                  Database Theory & Design Certificate of Completion - EDCC
+                  <span class="ml-auto">March 2019</span>
+                </li>
+				<li class="list-unstyled-item list-hours-item d-flex">
+                  MTA: Database Fundamentals - MSFT
+                  <span class="ml-auto">(New) </span>
+                </li>
+                <li class="list-unstyled-item list-hours-item d-flex">
+                  Accounting Courses– University of Washington
                   <span class="ml-auto"></span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Master of Business Administration (MBA) – University of Phoenix 
+                  Master of Business Administration (MBA) – University of Phoenix
                   <span class="ml-auto"> </span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Bachelor of Science in Business Management (BSBM) – University of Phoenix 
+                  Bachelor of Science in Business Management (BSBM) – University of Phoenix
                   <span class="ml-auto"> </span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
@@ -100,7 +112,7 @@
                   <span class="ml-auto">Internal Boeing</span>
                 </li>
 				<li class="list-unstyled-item list-hours-item d-flex">
-				  Primavera Enterprise (P3e) Basics Certificate 
+				  Primavera Enterprise (P3e) Basics Certificate
                   <span class="ml-auto"></span>
                 </li>
 				<li class="list-unstyled-item list-hours-item d-flex">
@@ -119,11 +131,11 @@
 			  <ul >
 			    <li style="text-align: left;">Microsoft: Helped to improve the efficiency of server utilization for Bing and advertising by coordinating and managing sever assignment program. Extensively used SQL (custom reports), PowerShell, and CRM.
                 </li>
-                <li style="text-align: left;">Microsoft: Accomplished an audit of the computing maintenance budget and status. Presented findings (system status) via a multitude of reports resulting in the creation of a new BCA-wide cross-functional team. 
+                <li style="text-align: left;">Microsoft: Accomplished an audit of the computing maintenance budget and status. Presented findings (system status) via a multitude of reports resulting in the creation of a new BCA-wide cross-functional team.
                 </li>
-				<li style="text-align: left;">Boeing: Created a metric ‘OneStop’ (online ‘Metric Site’ for downloading reports) that provided status on 1300+ Engineering IT systems and about 45 investment requests by obtaining data from multiple systems including COGNOS. The initiation of the OneStop tool helps to address serious data inaccuracy issues. To the best of my knowledge, the OneStop tool is still in use. 
+				<li style="text-align: left;">Boeing: Created a metric ‘OneStop’ (online ‘Metric Site’ for downloading reports) that provided status on 1300+ Engineering IT systems and about 45 investment requests by obtaining data from multiple systems including COGNOS. The initiation of the OneStop tool helps to address serious data inaccuracy issues. To the best of my knowledge, the OneStop tool is still in use.
                 </li>
-				<li style="text-align: left;">Quadrant Homes: Invited to be on the JDE Power User Committee based on reporting of observations and recommendations for increased usage of capabilities. 
+				<li style="text-align: left;">Quadrant Homes: Invited to be on the JDE Power User Committee based on reporting of observations and recommendations for increased usage of capabilities.
 				</li >
 				<li style="text-align: left;">Quadrant Homes: Worked closely with the Leadership to maintain a budget that dealt strictly with all costs related to “Overages”. Directly contributed to the company's success in meeting the 2005 Strategic Plan with a focus on predictability within the residential building environment to facilitate growth.
 				</li>
@@ -153,7 +165,7 @@
                 </li>
                  <li style= "font-weight: bold; list-style: none;text-align: left;";>Program / Project Manager </li>
 				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>MICROSOFT CORP. (VIA AXELERATE), Redmond, WA  </li>
-				<li style= "list-style: none;text-align: left;";>Proactively coordinated and managed all aspects related to the onboarding, allocation, and distribution of servers for online services to include Bing and Ads. Worked heavily in technologies including SQL (Query Creation+) and PowerShell. Wrote and presented business case on behalf of customer for a daily capacity meeting.</li> 
+				<li style= "list-style: none;text-align: left;";>Proactively coordinated and managed all aspects related to the onboarding, allocation, and distribution of servers for online services to include Bing and Ads. Worked heavily in technologies including SQL (Query Creation+) and PowerShell. Wrote and presented business case on behalf of customer for a daily capacity meeting.</li>
 			    <UL>
 				<i><li style= "color: #66555a; list-style: none;text-align: left;";>Contributed to cost savings on underutilized resources through timely and accurate reports on Data Center health, capacity, and utilization. </li></i> <br>
 				</UL>
@@ -162,7 +174,7 @@
                  <li style= "font-weight: bold; list-style: none;text-align: left;";>PMO – Business Analyst  </li>
 				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>ATOS IT SOLUTIONS & SERVICES, Bellevue, WA   </li>
 				<li style= "list-style: none;text-align: left;";>Provided optimal oversight of an innovative TrueUp reporting process designed to give billing transparency to Microsoft Data Centers. Provided significant support to MSIT, within a six-week transitional project management
-role for (SDO-Cloud), enabling FT PM to hit the ground running. </li> 
+role for (SDO-Cloud), enabling FT PM to hit the ground running. </li>
 			    <UL>
 				<i><li style= "color: #66555a; list-style: none;text-align: left;";>Used of MiniTab (new to business location) to obtain root cause statistics as well as, In an effort to request more work, able to support MSIT (Azure) in a 6-week Transitional Project Management Role </li></i> <br>
 			    </UL>
@@ -170,15 +182,15 @@ role for (SDO-Cloud), enabling FT PM to hit the ground running. </li>
                 </li>
                 <li style= "font-weight: bold; list-style: none;text-align: left;";>Data Support Analyst 4 (Lead)  </li>
 				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>BOEING CORP., Everett, WA  </li>
-				<li style= "list-style: none;text-align: left;";>Led in-depth audit after presenting findings to executive level leadership of detailed risks associated with Service Level Agreements and System Status</li> 
+				<li style= "list-style: none;text-align: left;";>Led in-depth audit after presenting findings to executive level leadership of detailed risks associated with Service Level Agreements and System Status</li>
 			    <i><li style= "color: #66555a; list-style: none;text-align: left;";> </li></i> <br>
 			<p />
 			    </li>
                 <li style= "font-weight: bold; list-style: none;text-align: left;";>Project Management Specialist Level 3 – 5 (Lead)  </li>
 				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>BOEING CORP., Renton, WA  </li>
-				<li style= "list-style: none;text-align: left;";>Implemented sound project management principles to lead and set a foundation for communication related to Block Point scheduling, outages, and all associated risks. Coordinated work with IT focal and Project Manager in Non-IT Maintained Applications impacted by the Windows 7 Migration. Coordinated with upper management in supporting activities surrounding the integration of IDS (Defense Side) and BCA (Commercial) to form an integrated operation.</li> 
+				<li style= "list-style: none;text-align: left;";>Implemented sound project management principles to lead and set a foundation for communication related to Block Point scheduling, outages, and all associated risks. Coordinated work with IT focal and Project Manager in Non-IT Maintained Applications impacted by the Windows 7 Migration. Coordinated with upper management in supporting activities surrounding the integration of IDS (Defense Side) and BCA (Commercial) to form an integrated operation.</li>
 				<UL>
-				<i><li style= "color: #66555a; text-align: left;";>Compiled and created complex and innovative reports for executive reviews and performance tracking.</li></i>			   
+				<i><li style= "color: #66555a; text-align: left;";>Compiled and created complex and innovative reports for executive reviews and performance tracking.</li></i>
 			   <i><li style= "color: #66555a; text-align: left;";>Key member of a 4-person team designated to represent BCA Engineering System Strategy & Tool Investment Management.</li></i>
 				<i><li style= "color: #66555a; text-align: left;";>Recognized for pulling data from three non-reliable sources leading to an STP (Situation, Target, & Proposal) to the BCA Engineering Governance Board, resulting in attention to functional alignment on SLA issues. This helped to initiate an audit of a very substantial amount of computing maintenance expenditures.  </li></i>
 				<i><li style= "color: #66555a; text-align: left;";>Created a Six Sigma Lean Plotter Chart for the BCA Governance Process to better manage spending requests.</li></i>
@@ -189,7 +201,7 @@ role for (SDO-Cloud), enabling FT PM to hit the ground running. </li>
 			   <h4 style="color:#bd935a;">Additional experience as a Financial Analyst consultant at Microsoft Corp. and a Residential Construction Analyst/ Overage Budget with Quadrant Homes. Details available upon request.</h4>
                 </small>
 			  <p>
-            
+
                 </em>
               </p>
               <p class="mb-0">
