--- a/resume.html
+++ b/resume.html
@@ -67,6 +67,10 @@
 				<span class="section-heading-upper">EDUCATION & PROFESSIONAL DEVELOPMENT</span>
               </h2>
               <ul >
+		  <li class="list-unstyled-item list-hours-item d-flex">
+                  Certificate in Ethical Hacking - University of Washington
+                  <span class="ml-auto">June 2019</span>
+                </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Advanced Business Systems Analyst Certificate - EDCC
                   <span class="ml-auto">June 2019</span>
@@ -147,8 +151,8 @@
               <ul >
                 <li style= "font-weight: bold; list-style: none;text-align: left;";>Sr. Business Systems Analyst, Data Analyst, & Other Roles (Temporary Contracts)</li>
 				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>NW STAFFING, Everett, WA </li>
-				<li style= "list-style: none;text-align: left;";>Programmed a data analysis tool using Excel macros for calculating variances on construction projects associated with the California fires</li> <br>
-		      		<li style= "list-style: none;text-align: left;";>Senior Business Systems Analyst in Application Security and SecOps helping to manage and report on vulnerabilities</li> <br>
+				<li style= "list-style: none;text-align: left;";>Programmed a data analysis tool using Excel macros for calculating variances on construction projects associated with the California fires.</li>
+		      		<li style= "list-style: none;text-align: left;";>Senior Business Systems Analyst in Application Security and SecOps helping to manage and report on vulnerabilities.</li> <br>
 			<p />
                 </li>
                  <li style= "font-weight: bold; list-style: none;text-align: left;";>Data Analyst</li>
