--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,7 @@
               <ul >
 		  <li class="list-unstyled-item list-hours-item d-flex">
                   Certificate in Ethical Hacking - University of Washington
-                  <span class="ml-auto">June 2019</span>
+                  <span class="ml-auto">Currently Attending Courses</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Advanced Business Systems Analyst Certificate - EDCC
