--- a/resume.html
+++ b/resume.html
@@ -103,6 +103,10 @@
                   Bachelor of Science in Business Management (BSBM) – University of Phoenix
                   <span class="ml-auto"> </span>
                 </li>
+		 <li class="list-unstyled-item list-hours-item d-flex">
+                  Psychology – Western Washington University
+                  <span class="ml-auto"></span>
+                </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   Compliance with Airworthiness Regulations AC100-110
                   <span class="ml-auto">Internal Boeing</span>
