--- a/resume.html
+++ b/resume.html
@@ -127,10 +127,6 @@
                   Certificate of Completion in Business Writing - BCC
                   <span class="ml-auto"></span>
                 </li>
-				 <li class="list-unstyled-item list-hours-item d-flex">
-                  Psychology Courses - Western Washington University
-                  <span class="ml-auto"> </span>
-                </li>
               </ul>
 			   <h2 class="section-heading mb-5">
                 <span class="section-heading-lower"> </span>
@@ -154,7 +150,7 @@
               </h2>
               <ul >
                 <li style= "font-weight: bold; list-style: none;text-align: left;";>Sr. Business Systems Analyst, Data Analyst, & Other Roles (Temporary Contracts)</li>
-				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>NW STAFFING, Everett, WA </li>
+				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>Consulting Companies Including NW STAFFING, Everett, WA </li>
 				<li style= "list-style: none;text-align: left;";>Programmed a data analysis tool using Excel macros for calculating variances on construction projects associated with the California fires.</li>
 		      		<li style= "list-style: none;text-align: left;";>Senior Business Systems Analyst in Application Security and SecOps helping to manage and report on vulnerabilities.</li> <br>
 			<p />
