--- a/resume.html
+++ b/resume.html
@@ -152,7 +152,7 @@
                 <li style= "font-weight: bold; list-style: none;text-align: left;";>Sr. Business Systems Analyst, Data Analyst, & Other Roles (Temporary Contracts)</li>
 				<li style= "font-weight: bold; color: #bd935a; list-style: none;text-align: left;";>Consulting Companies Including NW STAFFING, Everett, WA </li>
 				<li style= "list-style: none;text-align: left;";>Programmed a data analysis tool using Excel macros for calculating variances on construction projects associated with the California fires.</li>
-		      		<li style= "list-style: none;text-align: left;";>Senior Business Systems Analyst in Application Security and SecOps helping to manage and report on vulnerabilities.</li> <br>
+		      		<li style= "list-style: none;text-align: left;";>Senior Business Systems Analyst in Application Security helping to manage and report on vulnerabilities.</li> <br>
 			<p />
                 </li>
                  <li style= "font-weight: bold; list-style: none;text-align: left;";>Data Analyst</li>
